# BiMersenne

./: Cargo.toml
src/: buffer.rs  main.rs
