[package]
name = "BiMersenne"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
num-bigint = "0.4.6"
num-prime = "0.4.4"
num-integer = "0.1.46"
mod_exp = "1.0.1"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
parking_lot = "0.12.3"
bitvec = "1.0.1"
rand = "0.9.0-beta.1"
concurrent-list = "0.0.2"
log = "0.4.22"
simple_logger = "5.0.0"